Bugfixes
- minify tinymcEditor.html enabled
- used minified html and css
- fixed scrollbar in webview

--- a/ownNoteEditor/src/main/resources/css/ownnote.css
+++ b/ownNoteEditor/src/main/resources/css/ownnote.css
@@ -338,6 +338,7 @@
 }
 
 /* no scrollbars in webview, please */
+.noteEditor, 
 .noteHTMLEditor {
     -fx-hbar-policy: never;
     -fx-vbar-policy: never;    
